--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-*, *:before, *:after {
+*, *::before, *::after {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -55,4 +55,15 @@ body.landing {
 /* Large screens (1024px) */
 @media (min-width : 1024px) {
     html { font-size: 120%; }
+}
+
+.clearfix::before,
+
+.clearfix::after {
+    content: " ";
+    display: table;
+}
+
+.clearfix::after {
+    clear: both;
 }
