--- a/styles/main.css
+++ b/styles/main.css
@@ -45,11 +45,11 @@ body.landing {
     }
     
     .column.full { width: 100%; }
-    .column.two.thirds { width: 66.7%; }
+    .column.two-thirds { width: 66.7%; }
     .column.half { width: 50%; }
     .column.third { width: 33.3%; }
     .column.fourth { width: 25%; }
-    .column.flow.opposite { float: right; }
+    .column.flow-opposite { float: right; }
 }
 
 /* Large screens (1024px) */
