--- a/styles/landing.css
+++ b/styles/landing.css
@@ -35,6 +35,16 @@ body.landing {
     position: relative;
     padding: 2rem;
     text-align: center;
+    opacity: 0;
+    -webkit-transform: scaleX(0.9) translateX(10rem);
+    -moz-transform: scaleX(0.9) translateX(10rem);
+    transform: scaleX(0.9) translateX(10rem);
+    -webkit-transition: all 0.5s ease-out;
+    -moz-transition: all 0.5s ease-out;
+    transition: all 0.5s ease-out;
+    -webkit-transition-delay: 0.3s;
+    -moz-transition-delay: 0.3s;
+    transition-delay: 0.3s;
 }
 
 .point .point-title {
